--- a/.npmrc
+++ b/.npmrc
@@ -1,2 +1,6 @@
 @yogeshicube:registry=https://npm.pkg.github.com
-//registry.npmjs.org/:_authToken=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
+//registry.npmjs.org/:_authToken=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
+
+
+git token:-
+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
